--- a/AppShell.xaml
+++ b/AppShell.xaml
@@ -4,12 +4,29 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:local="clr-namespace:CustomControls"
-    Shell.FlyoutBehavior="Disabled"
-    Title="CustomControls">
+    xmlns:pages="clr-namespace:CustomControls.Pages"
+    Title="CustomControls"
+    x:DataType="Shell"
+    Shell.FlyoutBehavior="Locked"
+    Shell.FlyoutWidth="220">
+
+    <Shell.FlyoutHeader>
+        <Grid RowDefinitions="*">
+            <Image Grid.Row="0" Source="dotnet_bot" />
+        </Grid>
+    </Shell.FlyoutHeader>
 
     <ShellContent
+        Title="Login"
+        ContentTemplate="{DataTemplate pages:LoginPage}"
+        FlyoutItemIsVisible="False"
+        Route="LoginPage" />
+
+    <FlyoutItem
         Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
+        Icon="dotnet_bot"
+        Route="MainPage">
+        <ShellContent ContentTemplate="{DataTemplate local:MainPage}" />
+    </FlyoutItem>
 
 </Shell>
